--- a/BaiTapLon/BaiTapLon.csproj
+++ b/BaiTapLon/BaiTapLon.csproj
@@ -149,5 +149,8 @@
   <ItemGroup>
     <None Include="Resources\teacher.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\body.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
