--- a/BaiTapLon/BaiTapLon.csproj
+++ b/BaiTapLon/BaiTapLon.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormAccout.Designer.cs">
       <DependentUpon>FormAccout.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCN.Designer.cs">
+      <DependentUpon>FormCN.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDiem1SV.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAccout.resx">
       <DependentUpon>FormAccout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCN.resx">
+      <DependentUpon>FormCN.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDiem1SV.resx">
       <DependentUpon>FormDiem1SV.cs</DependentUpon>
